# OpenPID

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  bindings.cpp  pyproject.toml
examples/: example_pid.c  example_pid.cpp
include/: generic_controller.hpp  generic_system.hpp  missile_6dof_quad.md  missile_6dof_quat.hpp  msd_system.hpp  pendulum_cart.hpp  pid.hpp  state_feedback.hpp
simulate/: pendulum_fs_simulate.py  pendulum_simulate.py  simulate.py  simulate_missile.py  test_generic_system.py  test_generics.py
src/: missile_6dof_quat.cpp
